--- a/.github/workflows/perlpack.yml
+++ b/.github/workflows/perlpack.yml
@@ -34,7 +34,7 @@ jobs:
           make perlpackstatic && zip -0 foo.zip perlpack.c
           ./perlpackstatic
           ./perlpackstatic -e 'use Cwd;print(Cwd::cwd(),"\n");'
-          ./perlpackstatic -e 'print(456,"\n");open(F,"<","/mnt/perlpack/lib/5.35.4/x86_64-linux/Cwd.pm");$line=<F>;print($line);print(456,"\n");'
+          strace -f ./perlpackstatic -e 'print(456,"\n");open(F,"<","/mnt/perlpack/lib/5.35.4/x86_64-linux/Cwd.pm");$line=<F>;print($line);print(456,"\n");'
           PACKFSLIBARCHIVE=foo.zip ./perlpackstatic -e 'print(789,"\n");open(F,"<","/mnt/perlpackarchive/perlpack.c");$line=<F>;print($line);print(789,"\n");'; echo $?
        
       - name: Artifacts
