--- a/.github/workflows/perlpack.yml
+++ b/.github/workflows/perlpack.yml
@@ -31,13 +31,13 @@ jobs:
       
       - name: Test Native Perl
         run: |
-          strace -f perl -e 'open(F,"<","Makefile");print(<F>);'
-          strace -f perl -e 'open(F,"<","Makefile");$line=<F>;print($line);'
+          #strace -f perl -e 'open(F,"<","Makefile");print(<F>);'
+          #strace -f perl -e 'open(F,"<","Makefile");$line=<F>;print($line);'
           make perlpackstatic && zip -0 foo.zip perlpack.c
           ./perlpackstatic
           ./perlpackstatic -e 'use Cwd;print(Cwd::cwd(),"\n");'
-          strace -f ./perlpackstatic -e 'print(456,"\n");open(F,"<","/mnt/perlpack/lib/5.35.4/x86_64-linux/Cwd.pm");$line=<F>;print($line);print(456,"\n");'
-          PACKFSLIBARCHIVE=foo.zip ./perlpackstatic -e 'print(789,"\n");open(F,"<","/mnt/perlpackarchive/perlpack.c");$line=<F>;print($line);print(789,"\n");'; echo $?
+          strace -f ./perlpackstatic -e 'open(F,"<","/mnt/perlpack/lib/5.35.4/x86_64-linux/Cwd.pm");print(<F>);'
+          #PACKFSLIBARCHIVE=foo.zip ./perlpackstatic -e 'print(789,"\n");open(F,"<","/mnt/perlpackarchive/perlpack.c");$line=<F>;print($line);print(789,"\n");'; echo $?
        
       - name: Artifacts
         uses: actions/upload-artifact@v4
