--- a/.github/workflows/perlpack.yml
+++ b/.github/workflows/perlpack.yml
@@ -28,22 +28,23 @@ jobs:
           ./perlpackstatic -e 'use Cwd;print(Cwd::cwd(),"\n");'
           ./perlpackstatic -e 'open(F,"<","/mnt/perlpack/lib/5.35.4/x86_64-linux/Cwd.pm");print(<F>);'
        
-      - name: Build and test perlpackstaticzip
+      - name: Build and test perlpackstatic.zip
         run: |
           git clone --single-branch --depth 1 https://github.com/libarchive/libarchive
           make libarchive/.libs/libarchive.a
           make perlpackstaticzip
-          zip -0 - perlpack.c >> perlpackstaticzip
-          ./perlpackstaticzip
-          ./perlpackstaticzip -e 'use Cwd;print(Cwd::cwd(),"\n");'
-          ./perlpackstaticzip -e 'open(F,"<","/mnt/perlpackarchive/perlpack.c");print(<F>);'
+          zip -0 perlpack.zip perlpack.c
+          cat perlpackstaticzip perlpack.zip > perlpackstatic.zip
+          ./perlpackstatic.zip
+          ./perlpackstatic.zip -e 'use Cwd;print(Cwd::cwd(),"\n");'
+          ./perlpackstatic.zip -e 'open(F,"<","/mnt/perlpackarchive/perlpack.c");print(<F>);'
        
       - name: Artifacts
         uses: actions/upload-artifact@v4
         with:
           path: |
             perlpackstatic
-            perlpackstaticzip
+            perlpackstatic.zip
             perlpack.h
             libc_perlpack.a
             perlpack
